--- a/index.html
+++ b/index.html
@@ -1,94 +1,10 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+title: Page d'accueil
+---
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Ubuntu tweaks : " />
+<header class="head">
+    <h1>Notes gelendir</h1>
+</header>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ubuntu tweaks</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/gelendir">View on GitHub</a>
-
-          <h1 id="project_title">Ubuntu tweaks</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>Préférences Système</h1>
-
-<p>Privacy</p>
-
-<p>Appearance</p>
-
-<h1>Ajout de logiciels de customisation</h1>
-
-<pre><code>sudo add-apt-repository ppa:tualatrix/ppa
-sudo apt-get update 
-sudo apt-get install ubuntu-tweak
-
-sudo add-apt-repository ppa:myunity/ppa
-sudo apt-get update
-sudo apt-get install myunity
-
-apt-get update &amp;&amp; apt-get upgrade
-
-sudo apt-get remove unity-lens-shopping
-</code></pre>
-
-<h1>Medibuntu</h1>
-
-<p>visiter <a href="http://www.medibuntu.org">http://www.medibuntu.org</a></p>
-
-<h1>Logiciels intéressants</h1>
-
-<ul>
-<li>ubuntu-restricted-extras</li>
-<li>libdvdcss2</li>
-<li>wine</li>
-<li>cheese</li>
-<li>gimp</li>
-<li>gnome-screensaver</li>
-</ul><h1>Tweaks</h1>
-
-<p>Afficher la barre de déroulement classique: </p>
-
-<pre><code>gsettings set com.canonical.desktop.interface scrollbar-mode normal 
-</code></pre>
-
-<h1>Autre liens</h1>
-
-<p><a href="http://askubuntu.com/questions/30334/what-application-indicators-are-available/37914#37914">http://askubuntu.com/questions/30334/what-application-indicators-are-available/37914#37914</a></p>
-
-<h1>Thèmes d'icones</h1>
-
-<ul>
-<li><a href="http://tiheum.deviantart.com/art/Faenza-Icons-173323228">http://tiheum.deviantart.com/art/Faenza-Icons-173323228</a></li>
-<li><a href="http://deviantn7k1.deviantart.com/art/Nitrux-OS-Icons-293634207">http://deviantn7k1.deviantart.com/art/Nitrux-OS-Icons-293634207</a></li>
-</ul>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
