--- a/posts.html
+++ b/posts.html
@@ -37,7 +37,7 @@ title: Posts
         <ul>
             {% for post in site.posts %}
                 <li>
-                    <a href="{{ site.baseurl }}{{ post.url }}">({{ post.date || date_to_string }}) {{ post.title }}</a>
+                    <a href="{{ post.url }}">({{ post.date || date_to_string }}) {{ post.title }}</a>
                 </li>
             {% endfor %}
         </ul>
