fix phrasing and title

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@ title: Page d'accueil
 ---
 
 <header class="head">
-    <h1>Notes divers gelendir</h1>
+    <h1>Notes gelendir</h1>
 </header>
 
 <p>
-Dans les menus de gauche, vous retrouverez les notes que je publie
-pour les ateliers que je donne lors des activités organisés par LinuQ, le groupe
-d'utilisateurs de Linux et des Logiciels Libres de la ville de québec (Pour plus d'infos,
-consultez le site web: <a href="http://www.linuq.org">http://www.linuq.org</a>
+Bienvenue sur mon site de notes.
+Dans la section de gauche, vous retrouverez les notes que je publie
+pour les ateliers organisés par LinuQ, le groupe
+d'utilisateurs Linux/Logiciels Libres de la ville de Québec. Pour plus d'infos,
+vous pouvez consulter le site web: <a href="http://www.linuq.org">http://www.linuq.org</a>
 </p>
